--- a/src/components/ProfileLayout/layout.module.scss
+++ b/src/components/ProfileLayout/layout.module.scss
@@ -7,6 +7,10 @@
   justify-content: center;
   gap: $indentXXXL;
   @media (max-width: $largeBreakPoint) {
-    gap: 0;
+    gap: $indentXS;
+  }
+  @media (max-width: $smallBreakPoint) {
+    gap: $indentS;
+    padding: 0 $indentXXXL;
   }
 }
